--- a/template.yaml
+++ b/template.yaml
@@ -3,6 +3,26 @@ Transform: AWS::Serverless-2016-10-31
 Description: Grocery Shopping Lambda Functions
 
 Resources:
+  GroceryShoppingSyncProductsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./GroceryShopping.Lambda.SyncProducts/src/GroceryShopping.Lambda.SyncProducts
+      Handler: GroceryShopping.Lambda.SyncProducts::GroceryShopping.Lambda.SyncProducts.Function::Handler
+      Runtime: dotnet8
+      Timeout: 900
+      MemorySize: 1024
+      FunctionName: grocery-shopping-sync-products
+      ReservedConcurrentExecutions: 1
+      EventInvokeConfig:
+        MaximumRetryAttempts: 0
+      Policies:
+        - Statement:
+            - Effect: Allow
+              Action:
+                - ssm:GetParametersByPath
+              Resource:
+                - !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/GroceryShopping"
+
   GroceryShoppingListifyFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -50,7 +70,7 @@ Resources:
       Handler: GroceryShopping.Lambda.Shop::GroceryShopping.Lambda.Shop.Function::Handler
       Runtime: dotnet8
       Timeout: 900
-      MemorySize: 512
+      MemorySize: 256
       FunctionName: grocery-shopping-shop-dotnet
       ReservedConcurrentExecutions: 1
       EventInvokeConfig:
