--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,10 +37,39 @@ jobs:
       - name: Run tests
         run: |
           dotnet test
+          
+  migrate:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Install EF Core CLI
+        run: dotnet tool install --global dotnet-ef
+        
+      - name: Build solution
+        run: dotnet build --configuration Release
+
+      - name: Run EF Core migrations
+        run: dotnet ef database update --project GroceryShopping.Infrastructure --startup-project GroceryShopping.Database
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: migrate
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
