--- a/GroceryShopping.Infrastructure.IntegrationTests/GroceryShopping.Infrastructure.IntegrationTests.csproj
+++ b/GroceryShopping.Infrastructure.IntegrationTests/GroceryShopping.Infrastructure.IntegrationTests.csproj
@@ -15,6 +15,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="NUnit" Version="4.3.2" />
@@ -31,6 +32,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GroceryShopping.Infrastructure\GroceryShopping.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.local.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
