--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,17 +26,6 @@ jobs:
 
       - name: Build project
         run: dotnet build --configuration Release
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Run tests
-        run: |
-          dotnet test
           
   migrate:
     runs-on: ubuntu-latest
@@ -67,9 +56,37 @@ jobs:
       - name: Run EF Core migrations
         run: dotnet ef database update --project GroceryShopping.Infrastructure --startup-project GroceryShopping.Database
 
-  deploy:
+  test:
     runs-on: ubuntu-latest
     needs: migrate
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Install dependencies
+        run: dotnet restore
+
+      - name: Build project
+        run: dotnet build --configuration Release
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Run tests
+        run: |
+          dotnet test
+          
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
